--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,21 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "*"
+python = "^3.12"
 flask = "*"
 flask-sqlalchemy = "*"
 sqlalchemy = "^2.0.32"
 flask-migrate = "*"
 flask-jwt-extended = "*"
-pytest = "*"
-pytest-mock = "*"
 psycopg2-binary = "*"
 gunicorn = "*"
+jinja2 = "<3.1"
+itsdangerous = "^2.2.0"
+flask-bcrypt = "*"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "*"
+pytest-mock = "*"
 
 [tool.pytest.ini_options]
 addopts = "-r, -vvv"
